# CSCI262_Pojects

Project 1 Image Fun/: CMakeLists.txt  README.txt  editor.cpp  editor.h  main.cpp  manager.h  picture.h  tool.h  utility.h
Project 1 Image Fun/framework/: manager.cpp  mondrian.cpp  mondrian.h  picture.cpp  steganography.cpp  steganography.h  utility.cpp
Project 1 Image Fun/images/: credits.txt
Project 2 Hashtable implementation/: README.TXT  hashtable.h  instrument.cpp  instrument.h  main.cpp  part2.txt
Project 3 Animal/: README.txt  animal.cpp
